# Asteroids

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tasks.txt
assets/configs/: asteroids.xml  asteroids_spawner.xml  commands.xml  explosionsList.xml  fonts.xml  input.xml  levels.xml  player_info.xml  shaders.xml  sounds.xml  sprites.xml  systems.xml  textures.xml  window.xml
assets/levels/: level_1
assets/objects/: asteroid_default.xml  asteroid_fast.xml  asteroid_fast_strong.xml  asteroid_strong.xml  big_explosion.xml  bullet.xml  camera.xml  explosion_1.xml  explosion_2.xml  explosion_3.xml  explosion_4.xml  explosion_5.xml  explosion_6.xml  hit_1.xml  hit_2.xml  hit_3.xml  objects.xml  player.xml
assets/ui/: game_over_window.xml  hud_window.xml  level_1_background.xml  level_2_background.xml  level_3_background.xml  manual_window.xml  menu_window.xml  pause_window.xml  win_game_window.xml  win_level_window.xml
src/: main.cpp
src/Components/: Common.cpp  Common.h  CommonComponents.cpp  CommonComponents.h
src/GameActions/: ClearMapAction.cpp  ClearMapAction.h  HideHUDAction.cpp  HideHUDAction.h  IncPlayerLevelAction.cpp  IncPlayerLevelAction.h  LoseLevelAction.cpp  LoseLevelAction.h  ResetPlayerLevelAction.cpp  ResetPlayerLevelAction.h  ScheduleGameStateAction.cpp  ScheduleGameStateAction.h  ShowHUDAction.cpp  ShowHUDAction.h  WinGameAction.cpp  WinGameAction.h  WinLevelAction.cpp  WinLevelAction.h
src/GameCommands/: CheatDestroyAllAsteroidsCommand.cpp  CheatDestroyAllAsteroidsCommand.h  CheatLoseLevelCommand.cpp  CheatLoseLevelCommand.h  FireCommand.cpp  FireCommand.h
src/GameConditions/: EndLevelDelayFinishedCondition.cpp  EndLevelDelayFinishedCondition.h  LoseLevelCondition.cpp  LoseLevelCondition.h  WinLevelCondition.cpp  WinLevelCondition.h
src/GameEnums/: AsteroidTypeEnum.h  ResourcesEnum.h
src/GameInfo/: PlayerInfo.cpp  PlayerInfo.h
src/GameStates/: GameOverGameState.cpp  GameOverGameState.h  LoadingGameState.cpp  LoadingGameState.h  MenuGameState.cpp  MenuGameState.h  PauseGameState.cpp  PauseGameState.h  PlayingGameState.cpp  PlayingGameState.h  WinLevelState.cpp  WinLevelState.h
src/MessengerEvents/: Common.h
src/Systems/: ComponentsRegistration.h  (+3 more)
(+67 files in other folders)
